# snake-cs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_test.yml
include/: level.h  matrix.h  operations.h  player.h  sn_options.h  vector.h
src/: CMakeLists.txt  level.c  main.c  matrix.c  operations.c  player.c  sn_options.c  vector.c
tests/: CMakeLists.txt  check_level.c  check_matrix.c  check_operations.c  check_options.c  check_player.c  check_vector.c  main.c
